--- a/mdx/now.mdx
+++ b/mdx/now.mdx
@@ -4,15 +4,17 @@
 
 ## Health 🧘
     - One hour of power yoga everyday
-    - Walking 10k steps everyday (Don't break the streak)
-    - Trying to do 10 min meditation everyday though not able to create a streak yet
-    - Trying to be more mindfull of my time and staying away from social media/news as much as possible
+    - Walking 10k steps
+    - 10 min meditation (Check out [Calm](https://www.calm.com/) and [Waking up](https://www.wakingup.com/))
+    - Staying away from social media/news as much as possible
+    - Heathy eating. Cooking all my meals myself
+    - A 5k run sometimes
 
 <br/>
 
 ## Books 📚
     Currently reading
-    - [Man's Search for Meaning](https://www.goodreads.com/book/show/4069.Man_s_Search_for_Meaning) - Physical book
+    - [Yoga Also for the Godless](https://www.goodreads.com/book/show/56354473-yoga-also-for-the-godless?ac=1&from_search=true&qid=o6kaCEexM3&rank=1) - Physical book
     - [Wild Power: Discover the Magic of Your Menstrual Cycle and Awaken the Feminine Path to Power](https://www.goodreads.com/book/show/30315907-wild-power?ref=nav_sb_ss_2_10) - Physical book
     - [Can't Hurt Me: Master Your Mind and Defy the Odds](https://www.goodreads.com/book/show/41721428-can-t-hurt-me?ref=nav_sb_ss_1_12) - Audible
     - [As a Man Thinketh](https://www.goodreads.com/book/show/81959.As_a_Man_Thinketh?ref=nav_sb_ss_1_17) - Kindle
