feat: add date section

--- a/mdx/now.mdx
+++ b/mdx/now.mdx
@@ -1,5 +1,6 @@
-# Now
+import styles from "../styles/Now.module.css";
 
+# Now
 <br/>
 
 ## Health 🧘
@@ -33,3 +34,9 @@
     - On my Frontend Journey at [Allganize](https://www.allganize.ai/)
     - Rewriting [Alli SDK](https://www.allganize.ai/en/allganize-answer) and creating an in-house UI library
     - Tech Stack: React, Typescript, Graphql
+
+<br/>
+
+<div className={styles.date}>
+    Last updated: August 2023
+</div>
