--- a/mdx/promise-chaining.mdx
+++ b/mdx/promise-chaining.mdx
@@ -200,24 +200,6 @@ This `promisify` function will return a function that, in turn, returns a Promis
 
 <br/>
 
-As you can see we have basically done this
-
-<CodeBlock code={
-    `
-     // return a function which in turn returns a Promise
-     return function(){
-
-        // wrap the asyncCallbackFn1 inside a Promise
-        return new Promise((resolve, reject) => {
-            // Call asyncCallbackFn1 and provide a callback function
-            asyncCallbackFn1(callback, data); // handle resolve,reject in the callback
-        })
-    }
-`
-}/>
-
-<br/>
-
 Now, let's convert all the functions to promisified functions
 
 <CodeBlock code={` const promisifiedFuncs = funcs.map((fn) => promisify(fn)); `}/>
@@ -294,6 +276,11 @@ So let's create an initial Promise that resolves with the data `initialData`, an
     let promise = Promise.resolve(initialData);
 
     for (const promiseFunc of promisifiedFuncs) {
+        // It's very interesting how this line works inside a for of loop
+        // For this, you need to know Event loop and Micro task queue
+
+        // In short, all the promises are chained in "promise" and
+        // are executed together at the end
         promise = promise.then((data) => promiseFunc(data));
     }
 `
@@ -312,6 +299,7 @@ Now, let's consume the data or handle the error from the Promise
     })
 `
 }/>
+<br/>
 
 So let's put all the steps together
 
@@ -348,7 +336,7 @@ Annnd we are done!! 🎉
 
 The same can be solved with `async/await`
 
-For solving such an iterative problem with async/await, we can use for await... of loop
+For solving such an iterative problem with async/await, we can use for of loop with await
 
 Let's start with a simple example:
 
