feat: update now section and rename css files to small case

--- a/mdx/are-you-a-product-engineer.mdx
+++ b/mdx/are-you-a-product-engineer.mdx
@@ -1,4 +1,4 @@
-import styles from "../styles/Blog.module.css";
+import styles from "../styles/blog.module.css";
 
 # What does it mean to be a Product Engineer?
 
