--- a/mdx/now.mdx
+++ b/mdx/now.mdx
@@ -1,4 +1,4 @@
-import styles from "../styles/Now.module.css";
+import styles from "../styles/now.module.css";
 
 # Now
 <br/>
@@ -7,9 +7,10 @@ import styles from "../styles/Now.module.css";
     - One hour of power yoga everyday
     - Walking 10k steps
     - 10 min meditation (Check out [Calm](https://www.calm.com/) and [Waking up](https://www.wakingup.com/))
-    - Staying away from social media/news as much as possible
-    - Heathy eating. Cooking all my meals myself
     - A 5k run sometimes
+    - Staying away from social media/news as much as possible
+    - Heathy eating. Cooking all my meals myself. Low carb, high protein
+    - Trying to be in sync with my menstrual cycle
 
 <br/>
 
@@ -38,5 +39,5 @@ import styles from "../styles/Now.module.css";
 <br/>
 
 <div className={styles.date}>
-    Last updated: August 2023
+    Last updated: September 2023
 </div>
