--- a/mdx/now.mdx
+++ b/mdx/now.mdx
@@ -4,20 +4,19 @@ import styles from "../styles/Now.module.css";
 <br/>
 
 ## Health 🧘
-    - One hour of power yoga everyday
     - Walking 10k steps
     - 10 min meditation (Check out [Calm](https://www.calm.com/) and [Waking up](https://www.wakingup.com/))
     - Staying away from social media/news as much as possible
-    - Heathy eating. Cooking all my meals myself
+    - Healthy eating. Cooking all my meals myself
     - A 5k run sometimes
 
 <br/>
 
 ## Books 📚
     Currently reading
-    - [Yoga Also for the Godless](https://www.goodreads.com/book/show/56354473-yoga-also-for-the-godless?ac=1&from_search=true&qid=o6kaCEexM3&rank=1) - Physical book
-    - [Wild Power: Discover the Magic of Your Menstrual Cycle and Awaken the Feminine Path to Power](https://www.goodreads.com/book/show/30315907-wild-power?ref=nav_sb_ss_2_10) - Physical book
+    - [To Kill a Mockingbird](https://www.goodreads.com/book/show/2657.To_Kill_a_Mockingbird) - Physical book
     - [Can't Hurt Me: Master Your Mind and Defy the Odds](https://www.goodreads.com/book/show/41721428-can-t-hurt-me?ref=nav_sb_ss_1_12) - Audible
+    - [The Worst Journey in the World](https://www.goodreads.com/book/show/62601932-the-worst-journey-in-the-world) - Kindle
     - [As a Man Thinketh](https://www.goodreads.com/book/show/81959.As_a_Man_Thinketh?ref=nav_sb_ss_1_17) - Kindle
 
 <br/>
@@ -31,12 +30,10 @@ import styles from "../styles/Now.module.css";
 <br/>
 
 ## Career 💻
-    - On my Frontend Journey at [Allganize](https://www.allganize.ai/)
-    - Rewriting [Alli SDK](https://www.allganize.ai/en/allganize-answer) and creating an in-house UI library
-    - Tech Stack: React, Typescript, Graphql
+    - Founding Engineer at [p0](https://p0.inc/)
 
 <br/>
 
 <div className={styles.date}>
-    Last updated: August 2023
+    Last updated: November 2023
 </div>
